Make cipher part of peppered crypt identifiers

--- a/metamerge.yml
+++ b/metamerge.yml
@@ -5,3 +5,7 @@ resources:
     type: git,
     url: git://github.com/Leont/crypt-passphrase-argon2-aes.git
     web: https://github.com/Leont/crypt-passphrase-argon2-aes
+prereqs:
+  runtime:
+    requires:
+      Crypt::Passphrase::Argon2: 0.009
