--- a/metamerge.yml
+++ b/metamerge.yml
@@ -8,4 +8,4 @@ resources:
 prereqs:
   runtime:
     requires:
-      Crypt::Passphrase::Argon2: 0.009
+      Crypt::Passphrase::Argon2::Encrypted: 0.009
