Fix typo in repository metadata

--- a/metamerge.yml
+++ b/metamerge.yml
@@ -2,7 +2,7 @@ resources:
   bugtracker:
     web: https://github.com/Leont/crypt-passphrase-argon2-aes/issues
   repository:
-    type: git,
+    type: git
     url: git://github.com/Leont/crypt-passphrase-argon2-aes.git
     web: https://github.com/Leont/crypt-passphrase-argon2-aes
 prereqs:
