Change author mail away from cpan.org

--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 ---
 abstract: 'A peppered AES-encrypted Argon2 encoder for Crypt::Passphrase'
 author:
-  - 'Leon Timmermans <leont@cpan.org>'
+  - 'Leon Timmermans <fawaka@gmail.com>'
 build_requires:
   Test::More: '0'
 configure_requires:
